refactor: use optional chaining when accessing data from notion

--- a/static/locales/en/viewer.json
+++ b/static/locales/en/viewer.json
@@ -3,9 +3,10 @@
 	"sign_out": "Sign out",
 	"register": "Register",
 	"school_start": "School starts at",
+	"extracurricular": "Extracurricular",
 	"wear": "Wear",
 	"bring_uniform": "Bring",
-	"subjects": "Subjects",
+	"schedule": "Schedule",
 	"time": "Time",
 	"subject": "Subject",
 	"teacher": "Teacher",
