--- a/static/locales/id/viewer.json
+++ b/static/locales/id/viewer.json
@@ -3,9 +3,10 @@
 	"sign_out": "Sign out",
 	"register": "Register",
 	"school_start": "Masuk pk.",
+	"extracurricular": "Eskur",
 	"wear": "Memakai",
 	"bring_uniform": "Membawa",
-	"subjects": "Daftar Mata Pelajaran",
+	"schedule": "Jadwal",
 	"time": "Jam",
 	"subject": "Pelajaran",
 	"teacher": "Guru",
