feat: translation updates

--- a/static/locales/en/viewer.json
+++ b/static/locales/en/viewer.json
@@ -7,16 +7,21 @@
 	"wear": "Wear",
 	"bring_uniform": "Bring",
 	"schedule": "Schedule",
+	"schedule_unavailable": "Schedule unavailable",
 	"time": "Time",
 	"subject": "Subject",
 	"teacher": "Teacher",
 	"recess": "Recess",
 	"tasks": "Tasks",
+	"tasks_unavailable": "No pending tasks",
 	"task": "Task",
 	"due": "Due",
 	"status": "Status",
 	"events": "Events",
 	"event": "Event",
+	"material": "Material",
+	"category": "Category",
+	"events_unavailable": "No events",
 	"prayer": "Prayer",
 	"song_and_opening": "Song and opener",
 	"devotional_and_closing": "Devotional and closing",
