--- a/static/locales/id/viewer.json
+++ b/static/locales/id/viewer.json
@@ -7,16 +7,21 @@
 	"wear": "Memakai",
 	"bring_uniform": "Membawa",
 	"schedule": "Jadwal",
+	"schedule_unavailable": "Jadwal tidak tersedia",
 	"time": "Jam",
 	"subject": "Pelajaran",
 	"teacher": "Guru",
 	"recess": "Istirahat",
-	"tasks": "Tugas-Tugas",
+	"tasks": "Dafter Tugas",
+	"tasks_unavailable": "Tidak ada tugas",
 	"task": "Tugas",
 	"due": "Tenggat",
 	"status": "Status",
 	"events": "Daftar Kegiatan",
 	"event": "Kegiatan",
+	"material": "Materi",
+	"category": "Kategori",
+	"events_unavailable": "Tidak ada acara",
 	"prayer": "Doa dan Renungan",
 	"song_and_opening": "Lagu dan pembuka",
 	"devotional_and_closing": "Renungan dan penutup",
