feat: agenda notes viewer component

--- a/static/locales/en/viewer.json
+++ b/static/locales/en/viewer.json
@@ -26,5 +26,7 @@
 	"song_and_opening": "Song and opener",
 	"devotional_and_closing": "Devotional and closing",
 	"end_prayer": "End prayer",
+	"notes": "Notes",
+	"notes_unavailable": "No note",
 	"preferences": "Preferences"
 }
