--- a/static/locales/id/viewer.json
+++ b/static/locales/id/viewer.json
@@ -26,5 +26,7 @@
 	"song_and_opening": "Lagu dan pembuka",
 	"devotional_and_closing": "Renungan dan penutup",
 	"end_prayer": "Doa pulang",
+	"notes": "Catatan",
+	"notes_unavailable": "Tidak ada catatan",
 	"preferences": "Preferensi"
 }
