fix: fix id translation typo

--- a/static/locales/id/viewer.json
+++ b/static/locales/id/viewer.json
@@ -13,7 +13,7 @@
 	"subject": "Pelajaran",
 	"teacher": "Guru",
 	"recess": "Istirahat",
-	"tasks": "Dafter Tugas",
+	"tasks": "Daftar Tugas",
 	"tasks_unavailable": "Tidak ada tugas",
 	"task": "Tugas",
 	"due": "Tenggat",
